--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,22 +1,42 @@
 {
   "$schema": "http://json.schemastore.org/package",
-  "name": "mathematico-backend",
-  "version": "1.0.0",
-  "description": "Backend for Mathematico - A Mathematics Learning Platform",
-  "main": "dist/index.js",
+  "name": "mathematico-unified-backend",
+  "version": "2.0.0",
+  "description": "Unified Backend for Mathematico - Supports both Mobile App and Admin Panel",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "node api/index.js",
-    "vercel-build": "echo 'Using simplified serverless function'"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Using unified backend server'",
+    "test": "echo 'No tests specified'",
+    "lint": "echo 'No linter configured'"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "helmet": "^7.2.0",
-    "mysql2": "^3.14.3"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.3",
+    "nodemailer": "^6.9.7",
+    "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": [
+    "mathematics",
+    "education",
+    "learning",
+    "api",
+    "backend",
+    "mobile",
+    "admin"
+  ],
+  "author": "Mathematico Team",
+  "license": "MIT"
 }
