--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,29 +1,29 @@
 {
-  "$schema": "http://json.schemastore.org/package",
   "name": "mathematico-unified-backend",
   "version": "2.0.0",
-  "description": "Unified Backend for Mathematico - Supports both Mobile App and Admin Panel",
+  "description": "Unified Backend for Mathematico - Android Only",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "vercel-build": "echo 'Using unified backend server'",
-    "test": "echo 'No tests specified'",
-    "lint": "echo 'No linter configured'"
+    "dev": "node server.js",
+    "vercel-build": "echo 'Using unified backend server'"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "helmet": "^7.2.0",
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "cors": "2.8.5",
+    "dotenv": "16.6.1",
+    "express": "4.21.2",
+    "form-data": "^4.0.4",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.3",
-    "nodemailer": "^6.9.7",
+    "multer": "^2.0.2",
+    "mysql2": "3.14.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
+    "pdf-poppler": "^0.2.1",
+    "sharp": "^0.34.4",
     "uuid": "^13.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -35,7 +35,8 @@
     "api",
     "backend",
     "mobile",
-    "admin"
+    "admin",
+    "android"
   ],
   "author": "Mathematico Team",
   "license": "MIT"
