Add simplified backend version for testing
- Created index-simple.js without database dependencies
- Updated vercel.json to use simplified version temporarily
- This will help identify if the issue is with database imports
- Simplified version includes basic endpoints and sample data

--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,38 +1,38 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": {
+    "api/index-simple.js": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/api/v1/mobile/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/api/v1/admin/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/api/v1/auth/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/api/v1/health",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/api/v1",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/api/index-simple.js"
     }
   ],
   "env": {
