Add Railway database integration
- Created index-db.js with database integration
- Added seed-railway-db.js to populate database with sample data
- Updated vercel.json to use database-integrated version
- Fixed database.js schema to match Railway MySQL structure
- Backend now stores and retrieves data from Railway database
- Fallback to sample data if database connection fails

--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,38 +1,38 @@
 {
   "version": 2,
   "functions": {
-    "api/index-simple.js": {
+    "api/index-db.js": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/api/v1/mobile/(.*)",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/api/v1/admin/(.*)",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/api/v1/auth/(.*)",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/api/v1/health",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/api/v1",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index-simple.js"
+      "dest": "/api/index-db.js"
     }
   ],
   "env": {
