--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,38 +1,38 @@
 {
   "version": 2,
   "functions": {
-    "api/index-db.js": {
+    "api/index-empty.js": {
       "maxDuration": 30
     }
   },
   "routes": [
     {
       "src": "/api/v1/mobile/(.*)",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/api/v1/admin/(.*)",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/api/v1/auth/(.*)",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/api/v1/health",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/api/v1",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index-db.js"
+      "dest": "/api/index-empty.js"
     }
   ],
   "env": {
