--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "cd Frontend; npm run build",
+    "vercel-build": "cd Frontend; npm run build",
     "dev": "cd Frontend; npm run dev",
     "install:frontend": "cd Frontend; npm install",
     "install:backend": "cd Backend; npm install",
