fix: add test-deployment.js and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,22 @@
     ],
     "routes": [
       {
+        "src": "/favicon.ico",
+        "dest": "/Backend/server.js"
+      },
+      {
+        "src": "/robots.txt",
+        "dest": "/Backend/server.js"
+      },
+      {
+        "src": "/api/(.*)",
+        "dest": "/Backend/server.js"
+      },
+      {
+        "src": "/health",
+        "dest": "/Backend/server.js"
+      },
+      {
         "src": "/(.*)",
         "dest": "/Backend/server.js"
       }
