--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "cd Frontend; npm run build",
-    "vercel-build": "cd Frontend; npm run build",
+    "vercel-build": "npm install",
     "dev": "cd Frontend; npm run dev",
     "install:frontend": "cd Frontend; npm install",
     "install:backend": "cd Backend; npm install",
@@ -18,5 +18,22 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "dependencies": {
+    "express": "4.21.2",
+    "cors": "2.8.5",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "16.6.1",
+    "bcryptjs": "^3.0.2",
+    "multer": "^2.0.2",
+    "mysql2": "3.14.3",
+    "axios": "^1.12.2",
+    "form-data": "^4.0.4",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
+    "pdf-poppler": "^0.2.1",
+    "sharp": "^0.34.4",
+    "uuid": "^13.0.0"
   }
 }
