--- a/.vercelignore
+++ b/.vercelignore
@@ -1,16 +1,117 @@
-Backend/node_modules/
-Backend/uploads/
-Backend/config.env
-Backend/config.env.example
-Backend/*.md
-Database.sql
-DATABASE_SETUP_README.md
-PROJECT_SETUP.md
-Logo.png
-Frontend/node_modules/
-Frontend/.env
-Frontend/.env.local
-Frontend/.env.development.local
-Frontend/.env.test.local
-Frontend/.env.production.local
+# Frontend build files
+Frontend/
+Frontend/**
+
+# Mobile app files
+mathematico/
+mathematico/**
+
+# Development files
 *.log
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+**/config.env
+**/config.env.example
+**/config.env.production
+
+# Test files
+**/test-*.html
+**/test-*.js
+**/test-*.ts
+
+# Documentation
+*.md
+**/README.md
+**/LOCAL_DEVELOPMENT.md
+**/JWT_IMPLEMENTATION_SUMMARY.md
+**/REFRESH_TOKEN_IMPLEMENTATION_SUMMARY.md
+**/BACKEND_SETUP.md
+**/ENVIRONMENT_SETUP.md
+**/PROJECT_SETUP.md
+**/DATABASE_SETUP_README.md
+
+# Database files
+Database.sql
+**/Database.sql
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output/
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
