--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "mathematico",
+  "name": "mathematico-platform",
   "version": "1.0.0",
-  "description": "Mathematico Learning Platform",
+  "description": "Mathematico Learning Platform - Mobile App, Backend, and Web Frontend",
   "private": true,
   "scripts": {
-    "build": "cd Frontend; npm run build",
-    "vercel-build": "npm install",
-    "dev": "cd Frontend; npm run dev",
-    "install:frontend": "cd Frontend; npm install",
-    "install:backend": "cd Backend; npm install",
-    "install:all": "npm run install:frontend; npm run install:backend"
+    "build": "cd Frontend && npm run build",
+    "dev": "cd Frontend && npm run dev",
+    "dev:backend": "cd Backend && npm run dev",
+    "dev:mobile": "cd mathematico && npm start",
+    "install:frontend": "cd Frontend && npm install",
+    "install:backend": "cd Backend && npm install",
+    "install:mobile": "cd mathematico && npm install",
+    "install:all": "npm run install:frontend && npm run install:backend && npm run install:mobile",
+    "vercel-build": "cd Backend && npm install"
   },
   "workspaces": [
     "Frontend",
-    "Backend"
+    "Backend",
+    "mathematico"
   ],
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "dependencies": {
-    "express": "4.21.2",
-    "cors": "2.8.5",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "16.6.1",
-    "bcryptjs": "^3.0.2",
-    "multer": "^2.0.2",
-    "mysql2": "3.14.3",
-    "axios": "^1.12.2",
-    "form-data": "^4.0.4",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.6",
-    "pdf-poppler": "^0.2.1",
-    "sharp": "^0.34.4",
-    "uuid": "^13.0.0"
-  }
+  "keywords": [
+    "education",
+    "mathematics",
+    "learning",
+    "mobile-app",
+    "react-native",
+    "express",
+    "nodejs"
+  ],
+  "author": "Mathematico Team",
+  "license": "MIT"
 }
