--- a/.npmrc
+++ b/.npmrc
@@ -1,13 +1,4 @@
-# Force Windows platform only
-target_platform=win32
-target_arch=x64
-target_libc=undefined
-
-# Exclude Linux packages
-platform=win32
-arch=x64
-
-# Ignore optional dependencies that might cause platform issues
+# Platform configuration
 optional=false
 
 # Use npm cache
