--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "Backend/server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "index.js": {
+      "runtime": "@vercel/node"
     }
-  ],
+  },
   "routes": [
-    { "src": "/(.*)", "dest": "/Backend/server.js" }
+    { "src": "/(.*)", "dest": "/index.js" }
   ]
 }
