--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "index.js": {
+    "Backend/index.js": {
       "runtime": "@vercel/node"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "src": "/(.*)", "dest": "/Backend/index.js" }
   ]
 }
