--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "vercel-build": "npm install"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -14,6 +13,7 @@
     "cors": "2.8.5",
     "dotenv": "16.6.1",
     "express": "4.21.2",
+    "express-rate-limit": "^7.1.5",
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +22,9 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -37,5 +40,11 @@
     "android"
   ],
   "author": "Mathematico Team",
-  "license": "MIT"
+  "license": "MIT",
+  "overrides": {
+    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
+    "@rollup/rollup-linux-x64-musl": "npm:rollup",
+    "@rollup/rollup-darwin-x64": "npm:rollup",
+    "@rollup/rollup-darwin-arm64": "npm:rollup"
+  }
 }
