--- a/Backend/config.env
+++ b/Backend/config.env
@@ -26,6 +26,9 @@ BACKEND_URL=https://mathematico-backend-new.vercel.app
 # Frontend Configuration
 FRONTEND_URL=https://mathematico-frontend.vercel.app
 
+# Mobile Configuration
+MOBILE_API_URL=https://mathematico-backend-new.vercel.app/api/v1
+
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=uploads
