--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,11 @@
     "mysql2": "3.14.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
