--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "description": "Unified Backend for Mathematico - Android Only",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "vercel-build": "echo 'Build complete'",
     "postinstall": "echo 'Dependencies installed'",
     "export-docs": "node scripts/export-swagger.js",
