--- a/Backend/config.env
+++ b/Backend/config.env
@@ -55,5 +55,9 @@ API_PREFIX=/api/v1
 DB_SYNC=false
 DB_LOGGING=false
 
+# Currency Configuration
+DEFAULT_CURRENCY=INR
+CURRENCY_SYMBOL=₹
+
 # Vercel Configuration
 VERCEL=1
