fix the remaning issue and now ready for deployment into vercel, Then into google playstore.

--- a/Backend/config.env
+++ b/Backend/config.env
@@ -22,8 +22,6 @@ ADMIN_PASSWORD=Myname*321
 # Backend Configuration
 BACKEND_URL=https://mathematico-backend-new.vercel.app
 
-# Frontend Configuration
-FRONTEND_URL=https://mathematico-frontend.vercel.app
 
 # Mobile Configuration
 MOBILE_API_URL=https://mathematico-backend-new.vercel.app/api/v1
@@ -31,6 +29,12 @@ MOBILE_API_URL=https://mathematico-backend-new.vercel.app/api/v1
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=uploads
+STORAGE_SERVICE=cloudinary
+
+# Cloudinary Configuration (for file uploads)
+CLOUDINARY_CLOUD_NAME=duxjf7v40
+CLOUDINARY_API_KEY=691967822927518
+CLOUDINARY_API_SECRET=M5LspD_XGt5DtI_0XPQ5DKz3awA
 
 # Security Configuration
 CORS_ORIGIN=https://mathematico-frontend.vercel.app
@@ -38,8 +42,8 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Email Configuration
-EMAIL_USER=dc2006089@gmail.com
-EMAIL_PASSWORD=your-app-password-here
+EMAIL_USER=sirramanujan@gmail.com
+EMAIL_PASSWORD=lfwdvspfszgfnybl
 EMAIL_FROM=Mathematico <noreply@mathematico.com>
 
 # Ethereal Email (for development/testing)
