--- a/Backend/config.env.example
+++ b/Backend/config.env.example
@@ -1,38 +1,70 @@
-# Database Configuration
-DB_HOST=hopper.proxy.rlwy.net
-DB_PORT=46878
-DB_USERNAME=root
-DB_PASSWORD=your-railway-password-here
-DB_DATABASE=railway
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
-JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-here-make-it-long-and-random
-
-# Admin Configuration
-ADMIN_EMAIL=admin@mathematico.com
-ADMIN_PASSWORD=secure-admin-password-here
-
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
+
+# Database Configuration
+DB_HOST=your_database_host
+DB_PORT=3306
+DB_USERNAME=your_database_username
+DB_PASSWORD=your_database_password
+DB_DATABASE=your_database_name
+
+# JWT Configuration (SINGLE LINE!!!)
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+JWT_ACCESS_EXPIRES_IN=1d
+JWT_REFRESH_EXPIRES_IN=7d
+
+# Admin Configuration
+ADMIN_EMAIL=admin@yourdomain.com
+ADMIN_PASSWORD=your-secure-admin-password
 
 # Backend Configuration
-BACKEND_URL=https://mathematico-backend-new.vercel.app
+BACKEND_URL=https://your-backend-domain.com
 
-# CORS Configuration
-FRONTEND_URL=https://mathematico-frontend.vercel.app
+# Frontend Configuration
+FRONTEND_URL=https://your-frontend-domain.com
 
-# Security Configuration
-BCRYPT_ROUNDS=10
-SESSION_SECRET=your-session-secret-here
-
-# Email Configuration (for future use)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+# Mobile Configuration
+MOBILE_API_URL=https://your-backend-domain.com/api/v1
 
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
-UPLOAD_PATH=./uploads
+UPLOAD_PATH=uploads
+STORAGE_SERVICE=cloudinary
+
+# Cloudinary Configuration (for file uploads)
+# Get these from https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Security Configuration
+CORS_ORIGIN=https://your-frontend-domain.com
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Configuration
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password-here
+EMAIL_FROM=Your App <noreply@yourdomain.com>
+
+# Ethereal Email (for development/testing)
+ETHEREAL_USER=ethereal.user@ethereal.email
+ETHEREAL_PASS=ethereal.pass
+
+# Razorpay Configuration (for payments)
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
+# Production Configuration
+API_PREFIX=/api/v1
+DB_SYNC=false
+DB_LOGGING=false
+
+# Currency Configuration
+DEFAULT_CURRENCY=INR
+CURRENCY_SYMBOL=₹
+
+# Vercel Configuration (set to 1 when deploying to Vercel)
+VERCEL=1
