--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,23 +14,24 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "2.8.5",
     "dotenv": "16.6.1",
     "express": "4.21.2",
     "express-rate-limit": "^7.1.5",
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "3.14.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "uuid": "^13.0.0",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "js-yaml": "^4.1.0"
+    "uuid": "^13.0.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
