--- a/Backend/config.env
+++ b/Backend/config.env
@@ -22,6 +22,8 @@ ADMIN_PASSWORD=Myname*321
 # Backend Configuration
 BACKEND_URL=https://mathematico-backend-new.vercel.app
 
+# Frontend Configuration
+FRONTEND_URL=https://mathematico-frontend.vercel.app
 
 # Mobile Configuration
 MOBILE_API_URL=https://mathematico-backend-new.vercel.app/api/v1
