--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,8 +25,8 @@
     "helmet": "^8.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "multer": "^2.0.2",
-    "mysql2": "3.14.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "swagger-jsdoc": "^6.2.8",
