Update Vercel routing configuration for better API endpoint matching

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,9 @@
     }
   },
   "routes": [
+    { "src": "/api/v1/auth", "dest": "/api/v1/auth.js" },
     { "src": "/api/v1/auth/(.*)", "dest": "/api/v1/auth.js" },
+    { "src": "/api/v1/mobile", "dest": "/api/v1/mobile.js" },
     { "src": "/api/v1/mobile/(.*)", "dest": "/api/v1/mobile.js" },
     { "src": "/(.*)", "dest": "/Backend/index.js" }
   ],
