--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,19 @@
       "runtime": "@vercel/node",
       "maxDuration": 30
     },
-    "Backend/index.js": {
+    "api/v1/admin.js": {
+      "runtime": "@vercel/node",
+      "maxDuration": 30
+    },
+    "api/v1/student.js": {
+      "runtime": "@vercel/node",
+      "maxDuration": 30
+    },
+    "api/v1/users.js": {
+      "runtime": "@vercel/node",
+      "maxDuration": 30
+    },
+    "api/index.js": {
       "runtime": "@vercel/node",
       "maxDuration": 30
     }
@@ -20,7 +32,15 @@
     { "src": "/api/v1/auth/(.*)", "dest": "/api/v1/auth.js" },
     { "src": "/api/v1/mobile", "dest": "/api/v1/mobile.js" },
     { "src": "/api/v1/mobile/(.*)", "dest": "/api/v1/mobile.js" },
-    { "src": "/(.*)", "dest": "/Backend/index.js" }
+    { "src": "/api/v1/admin", "dest": "/api/v1/admin.js" },
+    { "src": "/api/v1/admin/(.*)", "dest": "/api/v1/admin.js" },
+    { "src": "/api/v1/student", "dest": "/api/v1/student.js" },
+    { "src": "/api/v1/student/(.*)", "dest": "/api/v1/student.js" },
+    { "src": "/api/v1/users", "dest": "/api/v1/users.js" },
+    { "src": "/api/v1/users/(.*)", "dest": "/api/v1/users.js" },
+    { "src": "/api/v1", "dest": "/api/index.js" },
+    { "src": "/health", "dest": "/api/index.js" },
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ],
   "env": {
     "NODE_ENV": "production",
