--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,15 @@
     { "src": "/api/v1/auth/(.*)", "dest": "/api/v1/auth.js" },
     { "src": "/api/v1/mobile", "dest": "/api/v1/mobile.js" },
     { "src": "/api/v1/mobile/(.*)", "dest": "/api/v1/mobile.js" },
-    { "src": "/(.*)", "dest": "/Backend/index.js" }
+    { "src": "/api/v1/admin", "dest": "/Backend/index.js" },
+    { "src": "/api/v1/admin/(.*)", "dest": "/Backend/index.js" },
+    { "src": "/api/v1/student", "dest": "/Backend/index.js" },
+    { "src": "/api/v1/student/(.*)", "dest": "/Backend/index.js" },
+    { "src": "/api/v1/users", "dest": "/Backend/index.js" },
+    { "src": "/api/v1/users/(.*)", "dest": "/Backend/index.js" },
+    { "src": "/api/v1", "dest": "/Backend/index.js" },
+    { "src": "/health", "dest": "/Backend/index.js" },
+    { "src": "/", "dest": "/Backend/index.js" }
   ],
   "env": {
     "NODE_ENV": "production",
