Fix Vercel serverless function paths - Move auth.js and mobile.js to root api/ directory - Update vercel.json to use correct function paths - Ensure proper serverless function deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "name": "mathematico-backend",
   "functions": {
-    "api/v1/auth.js": {
+    "api/auth.js": {
       "runtime": "@vercel/node",
       "maxDuration": 30
     },
-    "api/v1/mobile.js": {
+    "api/mobile.js": {
       "runtime": "@vercel/node",
       "maxDuration": 30
     },
@@ -16,10 +16,10 @@
     }
   },
   "routes": [
-    { "src": "/api/v1/auth", "dest": "/api/v1/auth.js" },
-    { "src": "/api/v1/auth/(.*)", "dest": "/api/v1/auth.js" },
-    { "src": "/api/v1/mobile", "dest": "/api/v1/mobile.js" },
-    { "src": "/api/v1/mobile/(.*)", "dest": "/api/v1/mobile.js" },
+    { "src": "/api/v1/auth", "dest": "/api/auth.js" },
+    { "src": "/api/v1/auth/(.*)", "dest": "/api/auth.js" },
+    { "src": "/api/v1/mobile", "dest": "/api/mobile.js" },
+    { "src": "/api/v1/mobile/(.*)", "dest": "/api/mobile.js" },
     { "src": "/api/v1/admin", "dest": "/Backend/index.js" },
     { "src": "/api/v1/admin/(.*)", "dest": "/Backend/index.js" },
     { "src": "/api/v1/student", "dest": "/Backend/index.js" },
