Add test serverless function to debug Vercel routing issues

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
     }
   },
   "routes": [
+    { "src": "/api/test", "dest": "/api/test.js" },
     { "src": "/api/v1/auth", "dest": "/api/auth.js" },
     { "src": "/api/v1/auth/(.*)", "dest": "/api/auth.js" },
     { "src": "/api/v1/mobile", "dest": "/api/mobile.js" },
