--- a/Backend/config.env.example
+++ b/Backend/config.env.example
@@ -22,7 +22,7 @@ BACKEND_URL=https://mathematico-backend-new.vercel.app
 MOBILE_API_URL=https://mathematico-backend-new.vercel.app/api/v1
 
 # File Upload Configuration
-MAX_FILE_SIZE=1073741824
+MAX_FILE_SIZE=10485760
 UPLOAD_PATH=uploads
 STORAGE_SERVICE=cloudinary
 
