--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Dependencies
 node_modules/
 */node_modules/
+**/node_modules/
 
 # Build outputs
 dist/
@@ -171,6 +172,11 @@ expo-env.d.ts
 # Generated native folders
 /ios
 /android
+**/android/
+**/ios/
+**/.gradle/
+**/build/
+**/android_backup/
 
 # ===========================================
 # FRONTEND-APP IGNORES
