--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
