--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
@@ -28,7 +28,7 @@
     "expo-dev-client": "~6.0.13",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.15",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
