--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "bundler"
   },
   "extends": "./Frontend-app/tsconfig.json"
 }
