--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,27 +12,28 @@
     "test-api": "node -e \"const app = require('./index.js'); console.log('✅ API loads successfully');\""
   },
   "dependencies": {
-    "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
-    "cors": "2.8.5",
-    "dotenv": "16.6.1",
-    "express": "4.21.2",
-    "express-rate-limit": "^7.1.5",
-    "form-data": "^4.0.4",
-    "helmet": "^8.1.0",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "form-data": "^4.0.1",
+    "helmet": "^8.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.1",
-    "multer": "^2.0.2",
+    "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.6",
-    "sharp": "^0.34.4",
+    "nodemailer": "^6.9.16",
+    "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^13.0.0",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.3",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
