--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -15,151 +15,52 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/bottom-tabs": "^7.4.7",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.26",
-    "@react-navigation/stack": "^7.4.8",
-    "axios": "^1.12.1",
-    "expo": "~54.0.10",
-    "expo-constants": "~18.0.8",
-    "expo-dev-client": "~6.0.13",
-    "expo-document-picker": "^14.0.7",
-    "expo-file-system": "~19.0.15",
-    "expo-font": "~14.0.9",
-    "expo-image-picker": "^17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "lucide-react-native": "^0.544.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/bottom-tabs": "^7.1.4",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.7",
+    "@react-navigation/stack": "^7.1.3",
+    "axios": "^1.7.7",
+    "expo": "~52.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.4",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-splash-screen": "~0.29.16",
+    "expo-status-bar": "~2.0.0",
+    "lucide-react-native": "^0.454.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-image-picker": "^8.2.1",
-    "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-web": "^0.21.1",
-    "react-native-worklets": "^0.5.1",
-    "react-refresh": "^0.17.0"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "~4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
+    "react-refresh": "^0.14.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@react-native/gradle-plugin": "^0.81.1",
-    "@types/react": "~19.1.0",
-    "babel-preset-expo": "^54.0.1",
-    "typescript": "~5.9.2"
+    "@babel/core": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
+    "@react-native/gradle-plugin": "^0.76.5",
+    "@types/react": "~18.3.12",
+    "babel-preset-expo": "~11.0.0",
+    "typescript": "~5.6.2"
   },
   "overrides": {
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
     "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@expo/vector-icons": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/bottom-tabs": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/native-stack": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/native": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/stack": {
-      "react": "19.1.0"
-    },
-    "expo-font": {
-      "react": "19.1.0"
-    },
-    "expo-linear-gradient": {
-      "react": "19.1.0"
-    },
-    "expo-status-bar": {
-      "react": "19.1.0"
-    },
-    "expo": {
-      "react": "19.1.0"
-    },
-    "lucide-react-native": {
-      "react": "19.1.0"
-    },
-    "react-native-chart-kit": {
-      "react": "19.1.0"
-    },
-    "react-native-gesture-handler": {
-      "react": "19.1.0"
-    },
-    "react-native-image-picker": {
-      "react": "19.1.0"
-    },
-    "react-native-paper": {
-      "react": "19.1.0"
-    },
-    "react-native-reanimated": {
-      "react": "19.1.0"
-    },
-    "react-native-safe-area-context": {
-      "react": "19.1.0"
-    },
-    "react-native-screens": {
-      "react": "19.1.0"
-    },
-    "react-native-worklets": {
-      "react": "19.1.0"
-    },
-    "react-native": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/elements": {
-      "react": "19.1.0"
-    },
-    "use-sync-external-store": {
-      "react": "19.1.0"
-    },
-    "@react-navigation/core": {
-      "react": "19.1.0"
-    },
-    "use-latest-callback": {
-      "react": "19.1.0"
-    },
-    "react-native-is-edge-to-edge": {
-      "react": "19.1.0"
-    },
-    "@expo/devtools": {
-      "react": "19.1.0"
-    },
-    "expo-asset": {
-      "react": "19.1.0"
-    },
-    "expo-keep-awake": {
-      "react": "19.1.0"
-    },
-    "expo-modules-core": {
-      "react": "19.1.0"
-    },
-    "@callstack/react-theme-provider": {
-      "react": "19.1.0"
-    },
-    "react-freeze": {
-      "react": "19.1.0"
-    },
-    "@react-native/virtualized-lists": {
-      "react": "19.1.0"
-    },
-    "react-native-web": {
-      "react": "19.1.0"
-    }
+    "@rollup/rollup-darwin-arm64": "npm:rollup"
   },
   "expo": {
     "install": {
