--- a/Frontend-app/eas.json
+++ b/Frontend-app/eas.json
@@ -18,6 +18,7 @@
     },
     "production": {
       "distribution": "store",
+      "node": "20.18.3",
       "android": {
         "buildType": "app-bundle"
       },
