--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -17,23 +17,25 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-navigation/bottom-tabs": "^7.1.4",
-    "@react-navigation/native": "^7.0.13",
-    "@react-navigation/native-stack": "^7.1.7",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.1",
+    "@react-navigation/native": "^7.1.3",
+    "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.3",
     "axios": "^1.7.7",
-    "expo": "~52.0.0",
-    "expo-constants": "~17.0.3",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.1",
     "expo-dev-client": "~5.0.4",
     "expo-document-picker": "^12.0.2",
     "expo-file-system": "~18.0.4",
-    "expo-font": "~13.0.1",
+    "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-splash-screen": "~0.29.16",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.27.4",
+    "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.454.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -50,12 +52,15 @@
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.0",
+    "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.25.0",
+    "@babel/runtime": "^7.28.4",
     "@react-native/gradle-plugin": "0.76.5",
     "@types/react": "~18.3.12",
+    "babel-jest": "^29.7.0",
     "babel-preset-expo": "~11.0.0",
     "metro-cache": "^0.81.5",
+    "react-native-worklets": "^0.6.1",
     "typescript": "~5.6.2"
   },
   "engines": {
