--- a/Frontend-app/app.json
+++ b/Frontend-app/app.json
@@ -23,6 +23,9 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": []
-    }
+    },
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
