--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.28.4",
     "@react-native/gradle-plugin": "0.76.5",
