fix: update dependencies

--- a/Frontend-app/.npmrc
+++ b/Frontend-app/.npmrc
@@ -1,6 +1,12 @@
-# Disable workspace hoisting for problematic packages
+# Enable legacy peer deps to handle React/React Native version conflicts
 legacy-peer-deps=true
+
+# Disable engine checks to prevent version conflicts
 engine-strict=false
 
-# Force specific versions
+# Force specific React Native version
 @react-native/gradle-plugin=0.76.5
+
+# Configure npm to use the latest features
+auto-install-peers=true
+prefer-offline=true
