--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -16,9 +16,9 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.1",
@@ -26,20 +26,20 @@
     "axios": "^1.7.7",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.1",
-    "expo-dev-client": "~5.0.4",
-    "expo-document-picker": "^12.0.2",
-    "expo-file-system": "~18.0.4",
-    "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.2",
-    "expo-linear-gradient": "~14.0.1",
+    "expo-dev-client": "~6.0.15",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~0.29.16",
-    "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.27.4",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.454.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.76.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -49,7 +49,7 @@
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.21.0",
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
@@ -60,13 +60,27 @@
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.28.4",
+    "@react-native-community/cli": "^20.0.2",
     "@react-native/gradle-plugin": "0.76.5",
-    "@types/react": "~18.3.12",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/graceful-fs": "^4.1.9",
+    "@types/hammerjs": "^2.0.46",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/json-schema": "^7.0.15",
+    "@types/react": "~19.1.10",
+    "@types/stack-utils": "^2.0.3",
+    "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
-    "babel-preset-expo": "~11.0.0",
+    "babel-preset-expo": "~54.0.0",
     "metro-cache": "^0.81.5",
-    "react-native-worklets": "^0.6.1",
-    "typescript": "~5.6.2"
+    "react-native-worklets": "^0.5.1",
+    "typescript": "~5.9.2"
   },
   "engines": {
     "node": ">=20.18.0"
