--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "mathematico-unified-backend",
-  "version": "2.0.0",
-  "description": "Unified Backend for Mathematico - Android Only",
+  "name": "mathematico-backend",
+  "version": "2.0.1",
+  "description": "Backend API for Mathematico — optimized for Android and Web clients.",
   "main": "index.js",
+
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "vercel-build": "echo 'Build complete'",
-    "postinstall": "echo 'Dependencies installed'",
+    "vercel-build": "echo '✅ Build complete'",
+    "postinstall": "echo '📦 Dependencies installed successfully'",
     "export-docs": "node scripts/export-swagger.js",
-    "test-api": "node -e \"const app = require('./index.js'); console.log('✅ API loads successfully');\""
+    "test-api": "node -e \"require('./index.js'); console.log('✅ API loaded successfully');\""
   },
+
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -37,24 +39,29 @@
     "winston-daily-rotate-file": "^5.0.0",
     "xtend": "^4.0.2"
   },
+
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
+
   "engines": {
     "node": ">=18.0.0"
   },
+
   "keywords": [
-    "mathematics",
+    "mathematico",
+    "backend",
+    "api",
+    "express",
+    "mongodb",
     "education",
     "learning",
-    "api",
-    "backend",
-    "mobile",
-    "admin",
-    "android"
+    "server"
   ],
-  "author": "Mathematico Team",
+
+  "author": "Mathematico Development Team",
   "license": "MIT",
+
   "overrides": {
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
