--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Mathematico Learning Platform - Unified Monorepo (Backend + Frontend)",
   "private": true,
-
   "scripts": {
     "dev": "npm run dev:backend",
     "dev:backend": "npm run dev --workspace=Backend",
@@ -16,17 +15,14 @@
     "submit:ios": "npm run submit:ios --workspace=Frontend-app",
     "clean": "rd /s /q node_modules && rd /s /q Backend\\node_modules && rd /s /q Frontend-app\\node_modules && del package-lock.json"
   },
-
   "workspaces": [
     "Backend",
     "Frontend-app"
   ],
-
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-
   "overrides": {
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
@@ -34,11 +30,15 @@
     "@rollup/rollup-darwin-arm64": "npm:rollup",
     "@react-native/gradle-plugin": "0.76.5"
   },
-
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.27.1"
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.23.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.19.22",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "typescript": "^5.9.3"
   },
-
   "keywords": [
     "mathematico",
     "education",
@@ -49,7 +49,6 @@
     "monorepo",
     "learning"
   ],
-
   "author": "Mathematico Team",
   "license": "MIT"
 }
