--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
+    "validator": "^13.15.15",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xtend": "^4.0.2"
