fix backend url

--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "skipDefaultLibCheck": true,
+    "module": "esnext",
     "types": [],
     "baseUrl": "./src",
     "paths": {
